# jags-BatchelderModule

./: README  README.md  configure.ac
src/: BatchelderModule.cc  Makefile.am
src/functions/: Batchelder.cc  Batchelder.h  Makefile.am
